--- a/index.html
+++ b/index.html
@@ -1,37 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPG - Dragon Repeller</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div id="game">
-        <div id="stats">
-            <span class="stats">XP: <strong id="xpText">0</strong></span>
-            <span class="stats">Health: <strong id="healthText">100</strong></span>
-            <span class="stats">Gold: <strong id="goldText">50</strong></span>
+<body class="bg-dark text-white">
+
+    <div id="game" class="container py-5">
+        <!-- Stats Section -->
+        <div id="stats" class="row text-center mb-4">
+            <div class="col-sm-4">
+                <span>XP: <strong id="xpText">0</strong></span>
+            </div>
+            <div class="col-sm-4">
+                <span>Health: <strong id="healthText">100</strong></span>
+            </div>
+            <div class="col-sm-4">
+                <span>Gold: <strong id="goldText">50</strong></span>
+            </div>
         </div>
 
-        <div id="controls">
-            <button id="button1">Go to Store</button>
-            <button id="button2">Go to Cave</button>
-            <button id="button3">Go to Dragon</button>
+        <!-- Health Progress Bars -->
+        <div class="progress mb-3">
+            <div id="playerHealthBar" class="health-bar" style="width: 100%;">
+                <span>Health: 100</span>
+            </div>
+        </div>
+        <div class="progress mb-3" id="monsterProgress" style="display: none;">
+            <div id="monsterHealthBar" class="health-bar" style="width: 100%;">
+                <span>Monster Health: 100</span>
+            </div>
         </div>
 
-        <div id="monsterStats" style="display: none;">
-            <span class="stat">Monster Name: <strong><span id="monsterName"></span></strong></span>
-            <span class="stat">Health: <strong><span id="monsterHealth"></span></strong></span>
+        <!-- Buttons Section -->
+        <div id="controls" class="row justify-content-center mb-4">
+            <button id="button1" class="btn btn-outline-light mx-2">Go to Store</button>
+            <button id="button2" class="btn btn-outline-light mx-2">Go to Cave</button>
+            <button id="button3" class="btn btn-outline-light mx-2">Go to Dragon</button>
         </div>
 
-        <div id="text">
-            Welcome to Dragon Repeller! You must defeat the dragon that is preventing people from leaving the town. 
-            You are in the town square. Where do you want to go? Use the buttons above.
+        <!-- Monster Stats Section -->
+        <div id="monsterStats" class="text-center my-4" style="display: none;">
+            <span>Monster Name: <strong><span id="monsterName">Dragon</span></strong></span><br>
+            <span>Health: <strong><span id="monsterHealth">100</span></strong></span>
+        </div>
+
+        <!-- Game Text -->
+        <div id="text" class="text-center p-3 border border-light rounded">
+            Welcome to <strong>Dragon Repeller!</strong> You must defeat the dragon that is 
+            preventing people from leaving the town. You are in the town square. Where do you want to go? 
+            Use the buttons above.
         </div>
     </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="script.js" async defer></script>
 </body>
